feat : gorm database init
