# docs/api/swagger.yaml
@@ -137,16 +137,41 @@ info:
   description: This is a sample server for Mobile Numbers API
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html]
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
   title: Mobile Numbers API
   version: "1.0"
 paths:
+  /profile/upload:
+    post:
+      consumes:
+      - multipart/formdata
+      description: upload file to server
+      parameters:
+      - description: upload file
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses: {}
+      tags:
+      - Upload
   /user:
     get:
       consumes:
       - application/json
       description: Get all users from database and return
+      parameters:
+      - description: 'page number, default value: 1'
+        in: query
+        name: page
+        type: integer
+      - description: 'item per page, default value: 5'
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
