# internal/api/handler/user.go
@@ -1,7 +1,9 @@
 package handler
 
 import (
+	"path/filepath"
 	"strconv"
+	"strings"
 
 	"github.com/AliasgharHeidari/mobile-numbers-v1/internal/model"
 	"github.com/AliasgharHeidari/mobile-numbers-v1/internal/service"
@@ -9,22 +11,36 @@ import (
 )
 
 // @Summary 		Get all users
-// @Description  Get all users from database and return
-// @Tags 		users
-// @Accept 		json
+// @Description 	Get all users from database and return
+// @Tags 			users
+// @Accept 			json
 // @Produce 		json
+// @Param  			page  query int false "page number, default value: 1"
+// @Param  			limit query int false "item per page, default value: 5"
 // @Success 		200 {object} []model.User
 // @Failure 		500 {object} model.StatusInternalServerErrorResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
-// @Security 	BearerAuth
-// @Router 		/user [get]
+// @Security 		BearerAuth
+// @Router 			/user [get]
 func GetUserList(c *fiber.Ctx) error {
+	var (
+		start int = 0
+		end   int = 0
+	)
 
-	page, _ := strconv.Atoi(c.Query("page", "1"))
+	page, err := strconv.Atoi(c.Query("page", "1"))
+	if err != nil || page == 0 {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "invalid value for page. valid values are: -1: disable paging, 0<page: enable paging",
+		})
+	}
+	// TODO: handle raised error
 	limit, _ := strconv.Atoi(c.Query("limit", "5"))
 
-	start := (page - 1) * limit
-	end := start + limit - 1
+	if page > 0 && limit > 0 {
+		start = (page - 1) * limit
+		end = start + limit - 1
+	}
 
 	UserList, err := service.GetUserList(start, end)
 	if err != nil {
@@ -41,17 +57,17 @@ func GetUserList(c *fiber.Ctx) error {
 }
 
 // @Summary 		Get user by ID
-// @Description  Get user by ID from database and return
-// @Tags 		users
-// @Accept 		json
+// @Description 	Get user by ID from database and return
+// @Tags 			users
+// @Accept 			json
 // @Produce 		json
-// @Param 		id path int true "User ID"
+// @Param 			id path int true "User ID"
 // @Success 		200 {object} model.User
 // @Failure 		400 {object} model.StatusBadRequestResponse
 // @Failure 		404 {object} model.StatusNotFoundResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
 // @Failure 		500 {object} model.StatusInternalServerErrorResponse
-// @Router 		/user/{id} [get]
+// @Router 			/user/{id} [get]
 func GetUserByID(c *fiber.Ctx) error {
 	userID := c.Params("id")
 	id, err := strconv.Atoi(userID)
@@ -71,11 +87,11 @@ func GetUserByID(c *fiber.Ctx) error {
 }
 
 // @Summary 		Create user
-// @Description  Create user and save it to database
-// @Tags 		users
-// @Accept 		json
+// @Description 	Create user and save it to database
+// @Tags 			users
+// @Accept 			json
 // @Produce 		json
-// @Param 		user body model.CreateUserRequest true "User object"
+// @Param 			user body model.CreateUserRequest true "User object"
 // @Success 		201 {object} model.CreateUserSuccessResponse
 // @Failure 		400 {object} model.StatusBadRequestResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
@@ -105,17 +121,17 @@ func CreateUser(c *fiber.Ctx) error {
 
 // @Summary 		Update user by ID
 // @Description 	Update user by ID and save it to database
-// @Tags 		users
-// @Accept 		json
+// @Tags 			users
+// @Accept 			json
 // @Produce 		json
-// @Param 		id path int true "User ID"
-// @Param 		user body model.CreateUserRequest true "User object"
+// @Param 			id path int true "User ID"
+// @Param 			user body model.CreateUserRequest true "User object"
 // @Success 		200 {object} model.UpdateUserSuccessResponse
 // @Failure 	    400 {object} model.StatusBadRequestResponse
 // @Failure 		404 {object} model.StatusNotFoundResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
 // @Failure 		500 {object} model.StatusInternalServerErrorResponse
-// @Router 		/user/{id} [put]
+// @Router 			/user/{id} [put]
 func UpdateUserByID(c *fiber.Ctx) error {
 	UserID := c.Params("id")
 	id, err := strconv.Atoi(UserID)
@@ -145,17 +161,17 @@ func UpdateUserByID(c *fiber.Ctx) error {
 }
 
 // @Summary 		Delete user by ID
-// @Description  Delete user from database by ID
-// @Tags 		users
-// @Accept 		json
+// @Description  	Delete user from database by ID
+// @Tags 			users
+// @Accept 			json
 // @Produce 		json
-// @Param 		id path int true "User ID"
+// @Param 			id path int true "User ID"
 // @Success 		200 {object} model.DeleteUserSuccessResponse
 // @Failure 		404 {object} model.StatusNotFoundResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
 // @Failure 		400 {object} model.StatusBadRequestResponse
 // @Failure 		500 {object} model.StatusInternalServerErrorResponse
-// @Router 		/user/{id} [delete]
+// @Router 			/user/{id} [delete]
 func DeleteUserByID(c *fiber.Ctx) error {
 	UserID := c.Params("id")
 	id, err := strconv.Atoi(UserID)
@@ -175,18 +191,18 @@ func DeleteUserByID(c *fiber.Ctx) error {
 }
 
 // @Summary 		Add mobile number to user by ID
-// @Description  Add mobile number to user by ID and save it to database
-// @Tags 		mobile-numbers
-// @Accept 		json
+// @Description  	Add mobile number to user by ID and save it to database
+// @Tags 			mobile-numbers
+// @Accept 			json
 // @Produce 		json
-// @Param 		id path int true "User ID"
-// @Param 		mobileNumber body model.MobileNumber true "Mobile number object"
+// @Param 			id path int true "User ID"
+// @Param 			mobileNumber body model.MobileNumber true "Mobile number object"
 // @Success 		200 {object} model.AddMobileNumberSuccessResponse
 // @Failure 		400 {object} model.StatusBadRequestResponse
 // @Failure 		404 {object} model.StatusNotFoundResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
 // @Failure 		500 {object} model.StatusInternalServerErrorResponse
-// @Router 		/user/{id}/mobilenumber [post]
+// @Router 			/user/{id}/mobilenumber [post]
 func AddMobileNumber(c *fiber.Ctx) error {
 	UserID := c.Params("id")
 	id, err := strconv.Atoi(UserID)
@@ -215,17 +231,17 @@ func AddMobileNumber(c *fiber.Ctx) error {
 }
 
 // @Summary 		Delete mobile number by ID
-// @Description  Delete mobile number from database by ID
+// @Description  	Delete mobile number from database by ID
 // @Tags			mobile-numbers
-// @Accept 		json
+// @Accept 			json
 // @Produce 		json
-// @Param 		id path int true "Mobile number ID"
+// @Param 			id path int true "Mobile number ID"
 // @Success 		200 {object} model.DeleteMobileNumberSuccessResponse
 // @Failure 		400 {object} model.StatusBadRequestResponse
 // @Failure 		404 {object} model.StatusNotFoundResponse
 // @Failure 		401 {object} model.StatusUnauthorizedResponse
 // @Failure 		500 {object} model.StatusInternalServerErrorResponse
-// @Router		/user/{id}/mobilenumber [delete]
+// @Router			/user/{id}/mobilenumber [delete]
 func DeleteMobileNumber(c *fiber.Ctx) error {
 	UserID := c.Params("id")
 	id, err := strconv.Atoi(UserID)
@@ -247,4 +263,39 @@ func DeleteMobileNumber(c *fiber.Ctx) error {
 		"Message": "Mobile number has been deleted successfully",
 	})
 
+}
+
+// @Summery 	 upload file
+// @Description  upload file to server
+// @Tags 		 Upload
+// @Accept 		 multipart/formdata
+// @Produce 	 json
+// @Param        file formData file true "upload file"
+// @Router 		 /profile/upload [post]
+func UploadImage(c *fiber.Ctx) error {
+
+	file, err := c.FormFile("file")
+	if err != nil {
+		return err
+	}
+
+	ext := strings.ToLower(filepath.Ext(file.Filename))
+
+	if ext != ".jpg" && ext != ".jpeg" && ext != ".png" {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "only jpg & png allowed",
+		})
+	}
+	path := "./uploads" + "/" + file.Filename
+
+	if err := c.SaveFile(file, path); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": "failed to save file",
+		})
+	}
+
+	return c.Status(fiber.StatusAccepted).JSON(fiber.Map{
+		"message": "photo has been uploaded successfuly",
+		"path":    path,
+	})
 }
